--- a/documentation/installation_guide_es_ES.html
+++ b/documentation/installation_guide_es_ES.html
@@ -73,7 +73,7 @@ Chamilo es  un LMS que se ejecuta con <span style="font-weight: bold;">Apache 1.
 
 
 Puede ser enriquecida con la conversión a &nbsp;PowerPoint (característica llamada Dokeos
-Oogie) mediante el uso de <span style="font-weight: bold;">OpenOffice.org</span> + Java. Quizás  también quiera agregar el plugin de Videoconferencia de Dokeos mediante el uso de <span style="font-weight: bold;">RED5</span>
+Oogie) mediante el uso de <span style="font-weight: bold;">OpenOffice.org</span> + Java. Quizás  también quiera agregar el plugin de Videoconferencia de Chamilo mediante el uso de <span style="font-weight: bold;">RED5</span>
 servidor de código abierto de Flash. <br />
 
 
@@ -143,19 +143,19 @@ Para aprovechar la ventaja de la <span style="font-weight: bold;">Videoconferenc
 <hr style="width: 100%; height: 2px;" />
 <h2><a name="2._Installation_of_Chamilo_LMS"></a><span style="font-weight: bold;">2. Instalación de Chamilo LMS</span></h2>
 
-<a href="http://www.dokeos.com/download.php"></a>
+<a href="http://www.chamilo.org/"></a>
 <ul>
 
-  <li><a href="http://www.dokeos.com/node/33">Descargar Dokeos LMS</a></li>
+  <li><a href="http://www.chamilo.org/">Descargar Chamilo LMS</a></li>
 
   <li>Descomprimirlo.</li>
 
-  <li>Copiar el directorio de Dokeos en su directorio web de Apache. Este puede ser
+  <li>Copiar el directorio de Chamilo en su directorio web de Apache. Este puede ser
     <span style="font-weight: bold;">C:\xampp\htdocs\</span> en un servidor Windows o <span style="font-weight: bold;">/var/www/html/</span> en un servidor Linux.</li>
 
   <li>Abrir su navegador web (Internet Explorer, Firefox...) y escribir
-    <span style="font-weight: bold;">http://localhost/dokeos/</span> si se instala de manera local o
-    <span style="font-weight: bold;">http://www.domain.com/dokeos/</span> si se instala remotamente.</li>
+    <span style="font-weight: bold;">http://localhost/chamilo/</span> si se instala de manera local o
+    <span style="font-weight: bold;">http://www.domain.com/chamilo/</span> si se instala remotamente.</li>
 
   <li>Seguir el proceso de instalación web. Usted puede aceptar todos los valores
 predeterminados. Considere cambiar la contraseña de administrador y recuérdela.&nbsp;</li>
@@ -167,15 +167,15 @@ predeterminados. Considere cambiar la contraseña de administrador y recuérdela
 
 Los siguientes directorios necesitan tener permisos de lectura, escritura y ejecución para todos el mundo:
 <ul>
-  <li>dokeos/main/inc/conf/</li>
-  <li>dokeos/main/upload/users/</li>
-  <li>dokeos/main/default_course_document/</li>
-  <li>dokeos/archive/</li>
-  <li>dokeos/courses/</li>
-  <li>dokeos/home/</li>
+  <li>chamilo/main/inc/conf/</li>
+  <li>chamilo/main/upload/users/</li>
+  <li>chamilo/main/default_course_document/</li>
+  <li>chamilo/archive/</li>
+  <li>chamilo/courses/</li>
+  <li>chamilo/home/</li>
 </ul>
 
-(donde 'dokeos' es el directorio en el cual usted instaló Dokeos)
+(donde 'chamilo' es el directorio en el cual usted instaló Chamilo)
 <p>En Linux, Mac OS X y sistemas operativos BSD  puede usar el comando CHMOD
 777 para esto (aunque nosotros recomendamos que busque la ayuda de un
 administrador de sistemas con experiencia).
@@ -185,12 +185,12 @@ del clic derecho en ellos).
 
 <p>
 2.5. Los siguientes archivos necesitan tener permisos de lectura y escritura
-para el navegador web, sólo durante la instalación de Dokeos:
+para el navegador web, sólo durante la instalación de Chamilo:
 </p>
 
 <ul>
 
-  <li>dokeos/main/inc/conf/configuration.php (si está presente)</li>
+  <li>chamilo/main/inc/conf/configuration.php (si está presente)</li>
 
 </ul>
 
@@ -210,7 +210,7 @@ del clic derecho en ellos).
 <b>NOTAS:</b><br />
 
 No modifique los archivos home_*.html directamente. En vez de hacer esto,
-seleccione "Configurar la página de inicio" en la sección de administración de Dokeos.</p>
+seleccione "Configurar la página de inicio" en la sección de administración de Chamilo.</p>
 
 <p><span style="font-weight: bold;">Windows</span> : con paquetes combinados como XAMPP, disponibles por todo lado, la cuenta de acceso y contraseña
    para MySQL probablemente permanecerá vacía.</p>
@@ -223,14 +223,14 @@ seleccione "Configurar la página de inicio" en la sección de administración d
 <ul>
 
   <li><strong>Proteger su archivo de configuración: </strong>
-asegurarse que nadie pueda sobrescribirlo. Usted puede encontrar el archivo de configuración en el <em>(directorio de Dokeos)</em>/main/inc/conf/configuration.php.
+asegurarse que nadie pueda sobrescribirlo. Usted puede encontrar el archivo de configuración en el <em>(directorio de Chamilo)</em>/main/inc/conf/configuration.php.
 Hacerlo de solo lectura (windows/xwindows: clic derecho en el archivo para editar las propiedades.
 linux/bsd/macosx: usar el comando chmod 444). El archivo de
 configuración es creado por Apache, por lo tanto usted necesita ser administrador para cambiar sus
 permisos.</li>
 
   <li><strong>Proteger su directorio de instalación: </strong>
-si el <em>(directorio de Dokeos)</em> directorio /main/install
+si el <em>(directorio de Chamilo)</em> directorio /main/install
 sigue accesible, alguien podría instalar de nuevo sobre la versión existente
 (usted puede perder sus datos de esta manera). Por ello es muy importante que mueva el directorio a algún lugar
 fuera de los directorios web para que no se encuentre accesible, cambie su nombre, o
@@ -240,17 +240,17 @@ edite sus propiedades para que nadie pueda leerlo o ejecutarlo.</li>
 hacer que todos los archivos posean permisos de escritura facilita la instalación y resuelve muchas
 dudas a las personas con poca experiencia en administración. Sin embargo, en lugar de esto, es más seguro
 hacer que el propietario del proceso de Apache (usualmente llamado apache
-o www-data) sea también propietario de todos los archivos y carpetas de Dokeos. De esta manera,
+o www-data) sea también propietario de todos los archivos y carpetas de Chamilo. De esta manera,
 estos archivos sólo tendrán permisos de lectura y escritura para el propietario
 del proceso Apache y  no para todo el mundo.</li>
 
-  <li><strong>Configurar su instalación de Dokeos: </strong>
-en la sección de administración de Dokeos, usted puede usar las Opciones de Configuración de Dokeos para ajustar el comportamiento de su instalación.</li>
+  <li><strong>Configurar su instalación de Chamilo: </strong>
+en la sección de administración de Chamilo, usted puede usar las Opciones de Configuración de Chamilo para ajustar el comportamiento de su instalación.</li>
 
-  <li><strong>Configurar correo de Dokeos: </strong>
-por lo general Dokeos usa las configuraciones de correo del archivo php.ini. Sin embargo,
+  <li><strong>Configurar correo de Chamilo: </strong>
+por lo general Chamilo usa las configuraciones de correo del archivo php.ini. Sin embargo,
 la herramienta de anuncios usa phpMailer (otro proyecto de software libre)
-y las configuraciones para esta herramienta pueden ser ajustadas en <em>(directorio de dokeos)</em>/main/inc/conf/mail.conf.php.</li>
+y las configuraciones para esta herramienta pueden ser ajustadas en <em>(directorio de chamilo)</em>/main/inc/conf/mail.conf.php.</li>
 
 
 </ul>
@@ -261,7 +261,7 @@ y las configuraciones para esta herramienta pueden ser ajustadas en <em>(directo
 <h3>Configuración PHP</h3>
 
 
-Para obtener lo mejor de Dokeos, necesita ajustar la configuración de PHP. Considere: <br />
+Para obtener lo mejor de Chamilo, necesita ajustar la configuración de PHP. Considere: <br />
 
 <ul>
 
@@ -401,7 +401,7 @@ es importante para permitir mover los directorios courses/ y upload/
 a la nueva instalacion</li>
   <li> Descargar el paquete de instalacion de Dokeos 1.8.6 desde la
     <a href="http://www.dokeos.com/en/node/33">página de descarga de Dokeos</a></li>
-  <li> descomprimir los nuevos archivos de Dokeos 1.8.6 en el directorio principal de Dokeos. El nuevo
+  <li> descomprimir los nuevos archivos de Chamilo 1.8.6 en el directorio principal de Dokeos. El nuevo
 directorio <em>principal</em> debe estar ubicado directamente dentro de su
 directorio raiz de Dokeos</li>
   <li> Apuntar su navegador a la URL de su portal</li>
@@ -433,7 +433,7 @@ el nuevo. Usted puede eliminar la ruta antigua, cuando la actualización haya fi
 <b>NOTA:</b><br />
 
 No modifique los archivos de home_*.html directamente. En lugar de ello,
-seleccione "Configurar la página de inicio" en la sección de administración de Dokeos.
+seleccione "Configurar la página de inicio" en la sección de administración de Chamilo.
 </p>
 
 <p>
@@ -442,17 +442,17 @@ seleccione "Configurar la página de inicio" en la sección de administración d
 
 Los siguientes directorios necesitan permisos de lectura, escritura y ejecución para el servidor web:
 <ul>
-  <li>dokeos/main/inc/conf/</li>
-  <li>dokeos/main/upload/users/</li>
-  <li>dokeos/main/default_course_document/</li>
-  <li>dokeos/archive/</li>
-  <li>dokeos/courses/</li>
-  <li>dokeos/home/</li>
+  <li>chamilo/main/inc/conf/</li>
+  <li>chamilo/main/upload/users/</li>
+  <li>chamilo/main/default_course_document/</li>
+  <li>chamilo/archive/</li>
+  <li>chamilo/courses/</li>
+  <li>chamilo/home/</li>
 </ul>
 
 En Linux, Mac OS X y sistemas operativos BSD esto se puede arreglar rápidamente  mediante el uso
 del comando CHMOD 777, sin embargo si usted no está seguro,  le recomandamos que busque
-asistencia para su propio SO en <a href="http://www.dokeos.com/en/node/66">nuestro foro</a>.
+asistencia para su propio SO en <a href="http://forum.chamilo.org">nuestro foro</a>.
 En Windows, quizás necesite revisar las propiedades de las carpetas.
 <p>
 </p>
@@ -461,7 +461,7 @@ En Windows, quizás necesite revisar las propiedades de las carpetas.
 
 La siguiente guía de actualización rápida rapida asume lo siguiente:
 <ul>
-  <li>El nombre de usuario de la base de datos de Dokeos (para MySQL) es "dokeos_db_user" y su acceso es "dokeos_user"</li>
+  <li>El nombre de usuario de la base de datos de Chamilo (para MySQL) es "dokeos_db_user" y su acceso es "dokeos_user"</li>
   <li>Actualmente la instalacion de Dokeos esta en /var/www/dokeos/ y tiene permisos 777</li>
   <li>La URL de su portal es http://www.portalurl.com/</li>
 </ul>
@@ -516,8 +516,8 @@ una respuesta a su pregunta. Nosotros también mantenemos una lista de
 <hr style="width: 100%; height: 2px;" />
 <h2><a name="5._Administration_section"></a>5. Sección de Administración</h2>
 
-<p>Para acceder a la sección de administración de Dokeos, abra el navegador,
-diríjase a su dirección de Dokeos y acceda a el con el usuario admin.
+<p>Para acceder a la sección de administración de Chamilo, abra el navegador,
+diríjase a su dirección de Chamilo y acceda a el con el usuario admin.
 Luego usted verá un enlace a la "Seccion de administracion de la plataforma" en la parte superior
 de la página web. En ese lugar usted puede administrar usuarios, cursos, secciones, apariencia del portal
 contenido de la página principal, categorías de cursos, entre otros.</p>
@@ -530,7 +530,7 @@ contenido de la página principal, categorías de cursos, entre otros.</p>
 <p>
 <i>Esta parte es opcional, solamente organizaciones con un servidor LDAP necesitan leer esto.</i><br />
 
-Un modulo LDAP está ya implementado en Dokeos, pero debe ser configurado para que tenga un correcto funcionamiento.
+Un modulo LDAP está ya implementado en Chamilo, pero debe ser configurado para que tenga un correcto funcionamiento.
 </p>
 
 
@@ -542,11 +542,11 @@ Distribuciones nuevas también permiten descargar rpms para los paquetes adicion
 </p>
 
 
-<h3><b>Activar LDAP en Dokeos</b></h3>
+<h3><b>Activar LDAP en Chamilo</b></h3>
 
 
 <p>
-En (la carpeta de Dokeos)/main/inc/conf/configuration.php, aproximadamente en la line 90, se puede ver<br />
+En (la carpeta de Chamilo)/main/inc/conf/configuration.php, aproximadamente en la line 90, se puede ver<br />
 
 //for new login module<br />
 
@@ -579,7 +579,7 @@ Solicitar al administrador del servidor LDAP los siguientes datos:
 
 </ul>
 Desde 1.8.5, usted tiene que cambiar las configuraciones de LDAP dentro del panel
-"Administración del Portal", bajo "Opciones de configuración de Dokeos", sección
+"Administración del Portal", bajo "Opciones de configuración de Chamilo", sección
 "LDAP".
 <br />
 
@@ -597,7 +597,7 @@ dominio LDAP: "dc=xx, dc=yy, dc=zz"; //dominio<br />
 <h3><b>Estado Profesor/Estudiante</b></h3>
 
 <p>
-De manera predeterminada, Dokeos revisará si el campo "employeenumber" tiene un valor. Si lo tiene, entonces Dokeos
+De manera predeterminada, Chamilo revisará si el campo "employeenumber" tiene un valor. Si lo tiene, entonces Chamilo
 considerará que este usuario es profesor.<br />
 
 Si usted desea cambiar este comportamiento, usted puede editar main/auth/ldap/authldap.php, la función ldap_put_user_info_locally(),
@@ -613,34 +613,34 @@ Adicionalmente usted puede suprimir esta revisión, eliminando la condición y d
 <p>
 Algunos servidores LDAP no permiten usos anónimos de los servicios del directorio.<br />
 En este caso, usted debe rellenar los campos apropiados en el
-panel de administración (ej. "manager" y "mypassword") y Dokeos tratará
+panel de administración (ej. "manager" y "mypassword") y Chamilo tratará
 de autentificarse usando esto, o volver al modo anónimo antes de darse por vencido.</p>
 
 
 <h3>Importar LDAP en sesiones</h3>
 
 <p>Existe un nuevo grupo de scripts que permiten  insertar usuarios
-desde LDAP directamente a una sesión de Dokeos. Sin embargo, esto se basa en un
+desde LDAP directamente a una sesión de Chamilo. Sin embargo, esto se basa en un
 conjunto de opciones estáticas en los atributos de contacto de LDAP.<br />
 
-Los campos usados intensivamente por el módulo de Dokeos son:<br />
+Los campos usados intensivamente por el módulo de Chamilo son:<br />
 
 </p>
 
 <ul>
 
-	<li>uid, el cual se corresponde con el username en Dokeos</li>
+	<li>uid, el cual se corresponde con el username en Chamilo</li>
 	<li>userPassword, el cual se corresponde con la contraseña del usuario. Aunque esta parte, por ahora, solamente funcionará con contraseñas no encriptadas,  no será necesaria si se usa el servidor LDAP para la autentificación.</li>
 
 	<li>ou debe terminar con el año de registro de la persona o cualquier
 criterio que usted use para filtrar a los usuarios, de manera que ellos puedan obtenerse
 con ese criterio</li>
 
-	<li>sn es usadl como el campo lastname en Dokeos</li>
+	<li>sn es usado como el campo lastname en Chamilo</li>
 
-	<li>givenName es usado como el campo firstname en Dokeos</li>
+	<li>givenName es usado como el campo firstname en Chamilo</li>
 
-	<li>mail es usado como el campo email en Dokeos</li>
+	<li>mail es usado como el campo email en Chamilo</li>
 
 </ul>
 
@@ -650,14 +650,14 @@ con ese criterio</li>
 
 <i>Esta parte es opcional, sólo interesa a las organizaciones que deseen usar fórmulas matemáticas dentro del editor en línea.</i><br />
 
-Usted puede habilitar la escritura de ecuaciones matemáticas dentro del editor en línea de Dokeos (FCKEditor) aplicando los siguientes pasos:
+Usted puede habilitar la escritura de ecuaciones matemáticas dentro del editor en línea de Chamilo (FCKEditor) aplicando los siguientes pasos:
 <ul>
 
-	<li>1. Configurar su instalación de Apache para agregar un directorio cgi-bin que contenga un enlace simbólico a mimetex.cgi en <i>dokeos/main/inc/lib/mimetex/</i>(*ver debajo)</li>
+	<li>1. Configurar su instalación de Apache para agregar un directorio cgi-bin que contenga un enlace simbólico a mimetex.cgi en <i>chamilo/main/inc/lib/mimetex/</i>(*ver debajo)</li>
 
 	<li>2. Recargar su configuración de Apache</li>
 
-	<li>3. Editar <i>dokeos/main/inc/lib/fckeditor/myconfig.js</i> y
+	<li>3. Editar <i>chamilo/main/inc/lib/fckeditor/myconfig.js</i> y
 
     <ul>
 
@@ -677,7 +677,7 @@ FCKConfig.ToolbarSets donde usted desee que el icono de LaTeX aparezca
     </ul>
 	  </li>
 
-	<li>4. En raras ocasiones puede ser necesario realizar ajustes manuales editando el fichero /dokeos/main/inc/lib/fckeditor/fckeditor.php</li>
+	<li>4. En raras ocasiones puede ser necesario realizar ajustes manuales editando el fichero /chamilo/main/inc/lib/fckeditor/fckeditor.php</li>
 
 	<li>5. Limpiar la cache de su navegador para probarlo (muy importante). Esto se puede hacer mediante el uso de la página de configuraciones de su navegador</li>
 
@@ -708,10 +708,10 @@ FCKConfig.ToolbarSets donde usted desee que el icono de LaTeX aparezca
 acceso directo al archivo mimetex.exe desde el directorio cgi-bin, o bajo
 Linux usando el siguiente comando:</i>
 
-<div class="code">ln -s /var/www/dokeos/main/inc/lib/mimetex/mimetex.cgi /var/www/cgi-bin/mimetex.cgi</div>
+<div class="code">ln -s /var/www/chamilo/main/inc/lib/mimetex/mimetex.cgi /var/www/cgi-bin/mimetex.cgi</div>
 <p>Si no quiere modificar su Apache, alternativamente a  este punto 6: copie mimetex.exe (para Windows) o mimetex.cgi (para Linux) en su cgi-bin/ </p>
 <p>&nbsp;</p>
-<p>Este procedimiento creará un nuevo icono en su editor en línea de Dokeos, el cual hará posible la inserción de fórmulas matemáticas en sus documentos.<br />
+<p>Este procedimiento creará un nuevo icono en su editor en línea de Chamilo, el cual hará posible la inserción de fórmulas matemáticas en sus documentos.<br />
   <br />
 
 
