--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -88,7 +88,7 @@
   <li>In Hotspot under Windows® (server-side), uploading a PNG file results in an unstable exercise</li>
   <li>Scorm: Objectives and interactions are not supported</li>
   <li>Scorm: Hotspot and Exact type of questions can't be exported in a SCORM package</li>
-  
+  <li>Course backup: When trying to generate a backup the image/video paths are not update with the new course code see CT#521</li>  
 </ul>
 <h3>Deprecated files</h3>
 <ul>
