--- a/home/home_top.html
+++ b/home/home_top.html
@@ -1,2 +1,2 @@
-<br/>
-<!-- <img src="{rel_path}home/large_dokeos_logo.gif" alt="Dokeos logo" /> -->
+<br />
+<!-- <img src="{rel_path}home/large_mascot.png" alt="Chamilo mascot" /> -->
