--- a/home/home_menu.html
+++ b/home/home_menu.html
@@ -1,1 +1,1 @@
-<li><a href="http://forum.chamilo.org" target="_self">Forum</a></li>
+<li><a href="http://www.chamilo.org/forum" target="_self">Forum</a></li>
