--- a/documentation/credits.html
+++ b/documentation/credits.html
@@ -17,15 +17,23 @@
   <h1>Chamilo Credits</h1>
 </div>
 <a href="index.html">Documentation</a> &gt; Credits
-<h1>Creator</h1>
+<h1>Creator (2000)</h1>
 
 Thomas De Praetere (thomas.depraetere@dokeos.com) 
 
 <h1>Core developers</h1>
 <ol>
-  <li>Dokeos.com
+  <li>BeezNest Latino (aka Dokeos Latinoamérica) (2008-2010)
   <ul>
-    <li>Yannick Warnier (ywarnier@beeznest.org)</li>
+    <li>Yannick Warnier (ywarnier@beeznest.org) - Lead developer</li>
+    <li>Julio Allen Montoya Armas (gugli100@gmail.com) - Lead latino developer</li>
+    <li>Christian Fasanando (christian534@hotmail.com)</li>
+    <li>Isaac Flores (florespaz_isaac@hotmail.com)</li>
+    <li>Carlos Vargas</li>
+  </ul>
+  </li>
+  <li>Dokeos (2004-2009)
+  <ul>
     <li>Arnaud Ligot (arnaud@cblue.be)</li>
     <li>Noel Dieschburg (noel@cblue.be)</li>
     <li>Frédéric Burlet (fburlet@cblue.be)</li>
@@ -42,7 +50,7 @@ Thomas De Praetere (thomas.depraetere@dokeos.com)
   </ul>
   </li>
 
-  <li>Ghent University
+  <li>Ghent University (2004-2007)
     <ul>
       <li>Patrick Cool (patrick.cool@ugent.be)</li>
       <li>Bert Vanderkimpen (bert.vanderkimpen@ugent.be)</li>
@@ -51,31 +59,27 @@ Thomas De Praetere (thomas.depraetere@dokeos.com)
     </ul>
   </li>
 
-  <li>Hogeschool Gent
+  <li>Hogeschool Gent (2004-2007)
   <ul>
     <li> Bart Mollet (bart.mollet@hogent.be)</li>
   </ul>
   </li>
 
-  <li>Independent
+  <li>Independent (2008-2010)
   <ul>
     <li> Juan Carlos Raña Trabado - considerable work on the wiki integration and improvements, and the FCKEditor/Mimetex extension as well as *many* FCKEditor's file manager and other modules improvements, as well as a continuous stream of recommendations that helped shape 1.8.5 and 1.8.6.*</li>
     <li> Ivan Tcholakov - various bugfixes in 1.8.6.*, very accurate bug reporting contributions and a considerable work in the integration of a new version of FCKEditor, along with a bunch of useful plugins and an exceptional work on internationalization</li>
   </ul>
   </li>
-  <li>Dokeos Latinoamerica
-  <ul>
-    <li>Julio Allen Montoya Armas (gugli100@gmail.com)</li>
-    <li>Isaac Flores (florespaz_isaac@hotmail.com)</li>
-    <li>Christian Fasanando (christian534@hotmail.com)</li>
-  </ul>
-  </li>
 </ol>
 
+<h1>Quality Assurance</h1>
+<ul>
+  <li>Arthur Portugal</li>
+  <li>Ricardo Rodriguez</li>
+</ul>
 
-<h1>System performance and Reliability improvements</h1>
-
-
+<h1>System performance</h1>
 <ul>
   <li>Arnaud Ligot (arnaud.ligot@dokeos.com)</li>
   <li>Jérôme Warnier (jerome.warnier@dokeos.com)</li>
@@ -86,7 +90,7 @@ Thomas De Praetere (thomas.depraetere@dokeos.com)
 <h1>Developments</h1>
 <h2>Announcement tool </h2>
 
-first versions by
+First versions by
 <ul>
   <li>Pablo Rey (prey@cesga.es)</li>
   <li> Roan Embrechts  (roan.embrechts@vub.ac.be)</li>
@@ -102,6 +106,8 @@ rewritten by
 <h2>Agenda</h2>
 <ul>
   <li>Patrick Cool (patrick.cool@UGent.be)</li>
+  <li>Carlos Vargas (global agenda)</li>
+  <li>Yannick Warnier (web services)</li>
 </ul>
 
 
@@ -242,10 +248,11 @@ see also http://www.dokeos.com/extensions/
 
 <h2>LDAP</h2>
 <ul>
-  <li>Main code: L'université Jean Monnet de Saint Etienne</li>
+  <li>Main code: University Jean Monnet of Saint Etienne</li>
   <li>Updates and improvements:</li>
   <li>Evie Embrechts</li>
   <li>Yannick Warnier</li>
+  <li>Mustapha Alouani - Université Paris 1 (Sorbonne)</li>
 </ul>
 
 <h2>Link tool</h2>
@@ -342,8 +349,10 @@ see also http://www.dokeos.com/extensions/
 
 <h2>Social Network</h2>
 <ul>
+  <li>Thanks to Universidad San Ignacio de Loyola, Lima for the sponsoring of this development</li>
   <li>Julio Montoya Armas (gugli100@gmail.com)</li>
   <li>Isaac Flores</li>
+  <li>Christian Fasanando</li>
 </ul>
 
 <h2>User Image</h2>
@@ -396,6 +405,21 @@ see also http://www.dokeos.com/extensions/
   <li>Patrick Cool (patrick.cool@UGent.be)</li>
   <li>Eric Marguin</li>
   <li>Yannick Warnier</li>
+</ul>
+
+<h2>Web services</h2>
+<ul>
+  <li>Yannick Warnier</li>
+  <li>Christian Fasanando</li>
+</ul>
+
+<h2>Conectivity with CMS (Drupal, Joomla)</h2>
+<ul>
+  <li>Fernando P. García</li>
+  <li>Marco Villegas Vega</li>
+  <li>Yannick Warnier</li>
+  <li>Furio Petrossi (for the hint on JFusion)</li>
+  <li>Carlos Vargas (for extending the JFusion plugin to Dokeos 1.8.6)</li>
 </ul>
 
 <h1>Online Authoring</h1>
